fix(app detail): Version list sort order (#265)
Fix version list card scrollbar

--- a/src/pages/AppDetail/index.scss
+++ b/src/pages/AppDetail/index.scss
@@ -20,16 +20,12 @@
   padding: 32px;
   border-radius: 2px;
   margin-bottom: 84px;
-  //background-color: $N0;
-  //box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
 }
 
 .detailCard{
   margin-bottom: 24px;
   padding: 32px;
-  //border-radius: 2px;
-  //background-color: $N0;
-  //box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+  overflow: hidden;
 }
 
 .versionItem{
